# app/Http/Requests/API/Contact/StoreRequest.php
@@ -1,0 +1,47 @@
+<?php
+
+namespace App\Http\Requests\API\Contact;
+
+use App\Facades\MessageFixer;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\ValidationException;
+
+class StoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            "name" => "required|max:50",
+            "email" => "required|email|max:50",
+            "phone" => "required|max:15",
+            "date" => "required",
+            "time" => "required",
+            "message" => "required|max:100"
+        ];
+    }
+
+    public function failedValidation(Validator $validator)
+    {
+        $response = new MessageFixer([
+            'code' => MessageFixer::HTTP_UNPROCESSABLE_ENTITY,
+            'status' => MessageFixer::WARNING,
+            'messages' => $validator->errors(),
+        ], MessageFixer::HTTP_UNPROCESSABLE_ENTITY);
+
+        throw new ValidationException($validator, $response);
+    }
+}
